log
Tue 19 Mar 2024 11:50:23 PM UTC: 
 tests:  0|5
total_score: 0/70
2470171
Tue 19 Mar 2024 11:58:25 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:18: error: invalid use of incomplete typedef ‘List’
   48 |         *((int*)L->data[L->size - 1]) = i;
      |                  ^~
exercises.c:48:26: error: invalid use of incomplete typedef ‘List’
   48 |         *((int*)L->data[L->size - 1]) = i;
      |                          ^~
Compilation failed
dd67432
Wed 20 Mar 2024 12:02:57 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
5ceef10
Wed 20 Mar 2024 12:05:55 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f0f691b
Wed 20 Mar 2024 12:07:13 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
76ea6a5
